test/errors/compare_bad_types_gt.luv
# RET: 1
# ERR: {self}:6:10:    if x > 0:
# ERR: {ssss}               ^ error: Cannot compare str and i32.
def int main():
    x = ""
    if x > 0:
        print true
